# GPUIntegration

./: .gitignore  CMakeLists.txt  README.md  kernel.cu
include/GPUIntegration/: cuda_pointer.h  portable.h  rawPortable_implementations.h  thread_pool.h  utility.h
include/GPUIntegration/portability_layer/: launch.h
include/GPUIntegration/portability_layer/utils/: configure.h  error_checking.h  launch.hxx
include/GPUIntegration/task_service/: thread_pool.h
include/GPUIntegration/utils/: execution_policy.h
src/: cudaMatOps.cu  cudaMatOps_PortableUma.cu  cudaMatOps_basic.cu  cudaMatOps_concurrent.cu  cudaMatOps_goal  cudaMatOps_goal.cu  cudaMatOps_hemi.cu  cudaMatOps_rawPortable+uma.cpp  cudaMatOps_uma.cu  cuda_runtimePortable+uma.cu  cuda_runtimePortable_dynamicPol.cu  matOps_kernels.cu  service_example.cu  service_staticPolym.cu  service_test.cpp  stream_ops_concurrent.cu  threadPool_example.cpp  utility.h
src/implementations/: rawPortable_implementations.cpp  rawPortable_implementations.cu  taskService_stat.cpp  taskService_virt.cpp
test/task_service/: test_threadPool_CUDAtask.cu  test_threadPool_simple.cpp  threadPool_example.cpp  time_task_launch.cpp
